# TripPlanner

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test.py  trip_agents.py  trip_tasks.py  web_app.py
static/: styles.css
templates/: index.html  result.html
test/: debug.py
tools/: Distance_tools.py  Image_tools.py  Place_tools.py  RoutePlanner_tools.py  browser_tools.py  calculator_tools.py  hotel_restaruant_tools.py  hotel_restaurant_tools.py  search_tools.py  weather_tools.py
