[project]
name = "trip-planner-crew"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10.0,<3.12"
dependencies = [
    "unstructured==0.10.25",
    "pyowm==3.3.0",
    "tools>=0.1.9",
    "langchain (>=1.2.10,<2.0.0)",
    "crewai (>=1.9.3,<2.0.0)",
    "crewai-tools (>=1.9.3,<2.0.0)",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "jinja2",
    "markdown2",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

